RESOLVED FIXED270824
Fix flaky WKWebExtensionAPIWebRequest tests
https://bugs.webkit.org/show_bug.cgi?id=270824
Summary Fix flaky WKWebExtensionAPIWebRequest tests
Brian Weinstein
Reported 2024-03-11 17:13:40 PDT
.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-03-11 17:13:50 PDT
Brian Weinstein
Comment 2 2024-03-11 17:20:29 PDT
EWS
Comment 3 2024-03-11 21:39:08 PDT
Committed 275955@main (5e785e867f36): <https://commits.webkit.org/275955@main> Reviewed commits have been landed. Closing PR #25748 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.